--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,22 +7,22 @@ homepage:
 publish_to: none
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.6"
 
 dependencies:
   flutter:
     sdk: flutter
   provider: ^5.0.0
-  adv_camera: ^1.3.1+1
+  adv_camera: ^2.0.1+1
   native_device_orientation: ^1.0.0
-  multi_image_picker: ^4.8.0
+  multi_image_picker2: ^5.0.2
   flutter_image_compress: ^1.0.0
-  permission_handler: ^6.1.1
-  path_provider: ^2.0.1
+  permission_handler: ^8.1.2
+  path_provider: ^2.0.2
 
-  animated_dialog_service:
-    path: /Users/emircanurfa/dev/flutter_packages/animated_dialog_service
+  dialog_service:
+    path: /Users/emircanurfa/dev/flutter_packages/dialog_service
 
 dev_dependencies:
   flutter_test:
