--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^5.0.0
+  provider: ^6.0.0
   adv_camera: ^2.0.1+1
   native_device_orientation: ^1.0.0
   multi_image_picker2: ^5.0.2
-  flutter_image_compress: ^1.0.0
-  permission_handler: ^8.1.2
+  flutter_image_compress: ^1.1.0
+  permission_handler: ^8.1.4+2
   path_provider: ^2.0.2
   device_info: ^2.0.2
 
