--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: image_provider
 description: A new Flutter package project.
-version: 0.3.9
+version: 0.4.0
 homepage: https://github.com/DestechHasarWebsiteleri/image_provider
 
 publish_to: none
@@ -12,19 +12,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.4
-  camera: ^0.10.0+4
+  provider: ^6.0.5
+  camera: ^0.10.1
   native_device_orientation: ^1.1.4
 
   flutter_image_compress: ^1.1.3
   permission_handler: ^10.2.0
   path_provider: ^2.0.11
-
+  device_info_plus: ^8.0.0
   #Web
-  file_picker: ^5.2.2
+  file_picker: ^5.2.4
 
 # deprecated
-  device_info: ^2.0.3
+
   multi_image_picker2: ^5.0.2
 
 
