--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,13 @@ dependencies:
   native_device_orientation: ^1.1.4
   flutter_image_compress: ^1.1.3
   path_provider: ^2.0.11
-  permission_asker: ^1.0.0+1
   multi_image_picker2: ^5.0.2
 
   #Web
   file_picker: ^5.2.4
+  permission_asker:
+    git:
+      url: "https://github.com/trailon/permission_asker.git"
   focused_image_widget:
     git:
       url: "https://github.com/CosmosExmo/focused_image_widget.git"
