--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,7 @@ dependencies:
       url: "https://github.com/trailon/permission_asker.git"
   focused_image_widget:
     git:
-      url: "https://github.com/trailon/focused_image_widget.git"
-      ref: d6efdc154b1fa1b5d37e327154bcce0f440a29ae
+      url: https://github.com/trailon/focused_image_widget.git
 
   dialog_service:
     git:
