--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,22 +6,22 @@ homepage: https://github.com/DestechHasarWebsiteleri/image_provider
 publish_to: none
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=2.18.0 <4.0.0'
   flutter: ">=2.2.3"
 
 dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
-  camera: ^0.10.1
-  native_device_orientation: ^1.1.4
+  camera: ^0.10.5+5
+  native_device_orientation: ^1.2.1
 
-  flutter_image_compress: ^1.1.3
-  permission_handler: ^10.2.0
-  path_provider: ^2.0.11
-  device_info_plus: ^8.0.0
+  flutter_image_compress: ^2.1.0
+  permission_handler: ^11.0.1
+  path_provider: ^2.1.1
+  device_info_plus: ^9.1.0
   #Web
-  file_picker: ^5.2.4
+  file_picker: ^6.0.0
 
 # deprecated
 
