--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,18 +15,13 @@ dependencies:
   provider: ^6.0.5
   camera: ^0.10.5+5
   native_device_orientation: ^1.2.1
-
+  image_pickers: ^2.0.4+5
   flutter_image_compress: ^2.1.0
   permission_handler: ^11.0.1
   path_provider: ^2.1.1
   device_info_plus: ^9.1.0
   #Web
   file_picker: ^6.0.0
-
-# deprecated
-
-  multi_image_picker2: ^5.0.2
-
 
   dialog_service:
     git:
