--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,15 @@ dependencies:
   provider: ^6.0.5
   camera: ^0.10.1
   native_device_orientation: ^1.1.4
-  flutter_image_compress: ^1.1.3
+  flutter_image_compress: ^2.1.0
   path_provider: ^2.0.11
-  multi_image_picker2: ^5.0.2
+  multi_image_picker_plus: ^0.0.3
 
   #Web
-  file_picker: ^5.2.4
-  permission_asker:
+  file_picker: ^6.0.0
+  permission_manager:
     git:
-      url: "https://github.com/trailon/permission_asker.git"
+      url: "https://github.com/trailon/permission_manager.git"
   focused_image_widget:
     git:
       url: https://github.com/CosmosExmo/focused_image_widget.git
