--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   native_device_orientation: ^1.1.4
   flutter_image_compress: ^2.1.0
   path_provider: ^2.0.11
-  multi_image_picker_plus: ^0.0.3
+  multi_image_picker_plus: #^0.0.3
+    git:
+      url: https://github.com/trailon/multi_image_picker_plus.git
 
   #Web
   file_picker: ^6.0.0
