--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ dependencies:
       url: https://github.com/CosmosExmo/focused_image_widget.git
 
   dialog_service:
-    git:
-      url: https://github.com/trailon/dialog_service.git
+    path: /Users/emircanurfa/dev/flutter_packages/dialog_service
 
 dev_dependencies:
   flutter_test:
