--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: image_provider
 description: Image provider package with support camera, gallery and file picker.
-version: 0.9.1
+version: 0.9.2
 
 publish_to: none
 
@@ -11,17 +11,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.5
-  camera: ^0.11.0+1
+  provider: ^6.1.2
+  camera: ^0.11.0+2
   native_device_orientation: ^2.0.3
-  flutter_image_compress: ^2.1.0
-  path_provider: ^2.0.11
+  flutter_image_compress: ^2.3.0
+  path_provider: ^2.1.5
   image_picker: ^1.1.2
 
-  wolt_modal_sheet: ^0.9.3
+  wolt_modal_sheet: ^0.9.4
 
   #Web
-  file_picker: ^8.0.6
+  file_picker: 8.1.4
   permission_manager:
     git:
       url: "https://github.com/trailon/permission_manager.git"
