--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: image_provider
 description: Image provider package with support camera, gallery and file picker.
-version: 0.9.3
+version: 0.10.0
+homepage: https://github.com/CosmosExmo/image_provider
 
 publish_to: none
 
@@ -12,13 +13,12 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.2
-  camera: ^0.11.0+2
   native_device_orientation: ^2.0.3
   flutter_image_compress: ^2.3.0
   path_provider: ^2.1.5
   image_picker: ^1.1.2
-
-  wolt_modal_sheet: ^0.10.0
+  wolt_modal_sheet: ^0.11.0
+  camerawesome: ^2.1.0
 
   #Web
   file_picker: ^8.1.6
